external-crates/move/crates/move-compiler/tests/move_2024/matching/at_pattern_copy_invalid.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E05001]: ability constraint not satisfied
   ┌─ tests/move_2024/matching/at_pattern_copy_invalid.move:10:13
   │
 3 │     public enum Maybe<T> has drop {
   │                 ----- To satisfy the constraint, the 'copy' ability would need to be added here
   ·
10 │             just @ Maybe::Just(x) => if (x > 0) { just } else { Maybe::Just(x * 2) },
   │             ^^^^^^^^^^^^^^^^^^^^^
   │             │      │
   │             │      The type '0x42::m::Maybe<u64>' does not have the ability 'copy'
   │             `@` patterns will copy non-reference values during unpacking if necessary
